# c-vm

./: .gitignore  CMakeLists.txt  README.md  assemble.bat  assemble.c  execute.c  main.c  plain.asm  program  program.asm  recreated.asm  source.asm
assembler/: CMakeLists.txt  assembler.cpp  disassembler.cpp  main.c  main.cpp
assembler/lib/: macros.asm  print_registers.asm  syscall_macros.asm  syscalls.asm
assembler/src/: args.c  args.cpp  args.h  args.hpp  assemble.c  assemble.h  assembler_data.cpp  assembler_data.hpp  chunk.c  chunk.cpp  chunk.h  chunk.hpp  data.cpp  data.hpp  disassembler.cpp  disassembler.hpp  disassembler_data.cpp  disassembler_data.hpp  err.cpp  err.h  instruction.c  instruction.cpp  instruction.h  instruction.hpp  label.hpp  labels.c  labels.h  line.c  line.h  macro.c  macro.h  parse_data.c  parse_data.h  parser.cpp  parser.hpp  pre-processor.cpp  pre-processor.h  registers.c  registers.h  string-list.c  (+3 more)
assembler/src/instructions/: argument.cpp  argument.hpp  instruction.cpp  instruction.hpp  signature.cpp  signature.hpp  signatures.cpp  signatures.hpp
assembler/src/messages/: error.cpp  error.h  error.hpp  list.cpp  list.hpp  message-list.cpp  message-list.h  message-list.hpp  message.cpp  message.hpp
assembler/src/pre-process/: constant.h  constant.pph  data.cpp  data.hpp  line.cpp  line.h  location-info.hpp  macro.hpp  pre-processor.cpp  pre-processor.h  pre-processor.hpp
assembler/stdlib/: print_registers.asm
assembler/test/: cat.asm  char-arg.asm  label-main.asm  label.asm  string-arg.asm  sub-mem-mem.asm
assembler/test/constants/: empty.asm  f64.asm  string.asm  u16.asm
assembler/test/directives/: define.asm  ignore.asm  include.asm  include2.asm  macro.asm  rm.asm
assembler/test/ops/: add.asm  cmp.asm  jmp.asm  mov.asm  neg.asm  or.asm  printing.asm  push.asm  sub.asm
assembler/test/syscalls/: input-char.asm  input-double.asm  input-float.asm  input-hex.asm  input-integer.asm  input-string.asm  input-unsigned-integer.asm  print-chars.asm  print-double.asm  print-float.asm  print-hex.asm  print-integer.asm  print-memory.asm  print-registers.asm  print-string.asm  print-unsigned-integer.asm
cpu/: cpu.c  cpu.h  err.c  fetch-exec.c  fetch-exec.h  opcodes.h
docs/: Assembler.md  CPU.md  Dir.md  Disassembler.md  Errors.md  Instructions.md  Language.md  README.md  Registers.md  Syscalls.md
language/: .gitignore  CMakeLists.txt  lexed.xml  main.cpp  program.txt
language/src/: LanguageOptions.cpp  LanguageOptions.hpp  Message.cpp  Message.h  Program.cpp  Program.hpp  Source.cpp  Source.hpp
language/src/ast/: Node.hpp
language/src/lexer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
language/src/operators/: Operator.cpp  Operator.h
language/src/parser/: Data.cpp  Data.h  FunctionSymbol.cpp  FunctionSymbol.hpp  Options.h  Parser.cpp  Parser.h  Parser.hpp  Scope.cpp  Scope.hpp  ScopeManager.cpp  ScopeManager.hpp  Symbol.cpp  Symbol.hpp  SymbolDeclaration.cpp  SymbolDeclaration.hpp  VariableSymbol.hpp  util.cpp  util.h
language/src/statement/: BinaryOperator.hpp  Expression.hpp  Function.cpp  Function.hpp  FunctionCall.cpp  FunctionCall.hpp  FunctionRef.hpp  Number.hpp  OperatorType.hpp  ReturnStatement.hpp  Statement.hpp  StatementBlock.hpp  Symbol.hpp  SymbolRef.hpp  UnaryOperator.hpp
language/src/tokens/: BinaryOperator.cpp  BinaryOperator.h  BracketLiteral.h  HasPrecedence.h  NumericLiteral.h  Print.h  SymbolDecl.cpp  SymbolDecl.h  SymbolReference.h  Token.cpp  Token.h
language/src/types/: FunctionType.cpp  FunctionType.hpp  NumericType.cpp  NumericType.h  NumericType.hpp  Static.h  Type.h  Type.hpp  UnitType.hpp  UserType.cpp  UserType.hpp
language/src/types/integer/: Buffer.h  Integer.cpp  Integer.h  i16.h  i32.h  i64.h  i8.h  u16.h  u32.h  u64.h  u8.h
processor/: CMakeLists.txt  main.c
src/: linked-list.h  util.c  util.h
(+195 files in other folders)
